Add self-service password change for all users
